--- a/app/views/door_access/validatedooraccess.erb
+++ b/app/views/door_access/validatedooraccess.erb
@@ -15,6 +15,8 @@
 <b>Door Name</b><%= collection_select :door, :door_id, @doors, :id, :doorname %><br>
 
 <%= submit_tag("Open Door") %>
+
+<%= debug(params) if Rails.env.development? %>
 <% end %>
 
 
